chore: update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,17 @@ dist-ssr
 # System
 .fuse_hidden*
 
+
 # Env
 .env
-.env.*
+.env.local
+.env.development
+.env.production
+
+!.evn.example
+!.evn.*.example
+
+# Lock files
+#pnpm-lock.yaml
+#yarn.lock
+#package-lock.json
