chore: update package.json

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vite-js-scss-template",
   "private": true,
-  "version": "0.9.0",
+  "version": "0.1.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -40,6 +40,15 @@
     "vite-plugin-remove-console": "^2.2.0",
     "vite-plugin-stylelint": "^6.0.2"
   },
+  "keywords": [
+    "webapp",
+    "starter",
+    "spa",
+    "template",
+    "tryproxy"
+  ],
+  "author": "tryproxy",
+  "license": "ISC",
   "lint-staged": {
     "*.{js,css,scss,html,json,md}": [
       "prettier --write"
